Drill-on-YARN configuration files
Snapshot creating Drill-on-YARN configuration files, shell scripts, etc.